@@ -925,7 +925,8 @@
 50) kernel: net: tcp: set SOCK_NOSPACE under memory pressure.<br>
 51) kernel: net: ipv4: kill ip_rt_frag_needed().<br>
 52) kernel: net: ipv4: icmp: fix PMTU handling for rare case.<br>
-53) kernel: net: ipv4/6: handle PMTU in all ICMP error handlers.<br>
+53) kernel: net: ipv4: remove unnecessary code from rt_check_expire().<br>
+54) kernel: net: ipv4/6: handle PMTU in all ICMP error handlers.<br>
 <br>
 <br>
 <b>TODO:</b><br>
